# shtcx-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  build-rpi.sh  build.rs  codecov.yml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: linux-shtc1.rs  linux-shtc3.rs  linux.rs  monitor-shtc3.rs  monitor.rs
src/: crc.rs  lib.rs  types.rs
