[package]
name = "shtcx"
version = "0.11.0"
edition = "2021"
authors = [
    "Danilo Bargen <mail@dbrgn.ch>",
    "Raphael Nestler <raphael.nestler@gmail.com>",
]
documentation = "https://docs.rs/shtcx"
repository = "https://github.com/dbrgn/shtcx-rs"
license = "MIT OR Apache-2.0"
description = "Platform agnostic Rust driver for the Sensirion SHTCx series temperature/humidity sensors."
readme = "README.md"
keywords = [
    "shtcx",
    "sensirion",
    "temperature",
    "humidity",
    "embedded-hal-driver",
]
categories = ["embedded", "hardware-support", "no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
default = []

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0", features = ["eh1"], default-features = false }
linux-embedded-hal = "0.4"
termion = "1.5"
tui = "0.8"

[profile.release]
lto = true
